force-app/main/default/objects/Bank_Account__c/fields/Account_type__c.field-meta.xml
<CustomField>
    <fullName>Account_type__c</fullName>
    <label>Account type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Saving account</fullName>
            </value>
            <value>
                <fullName>Demat_account</fullName>
                <label>Demat account</label>
            </value>
            <value>
                <fullName>Current Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>