force-app/main/default/objects/Bank_Account__c/fields/Description_by_manager__c.field-meta.xml
<CustomField>
    <fullName>Description_by_manager__c</fullName>
    <label>Description by manager</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>