force-app/main/default/objects/Bank_Account__c/recordTypes/Manager.recordType-meta.xml
<RecordType>
    <fullName>Manager</fullName>
    <active>true</active>
    <label>Manager</label>
</RecordType>