force-app/main/default/objects/Bank_Account__c/validationRules/Validation_on_Current_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Current_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Account_type__c , &quot;Current Account&quot;),(Balance__c &lt;10000))</errorConditionFormula>
    <errorDisplayField>Balance__c</errorDisplayField>
    <errorMessage>Minimum balance should be 10000 for current account</errorMessage>
</ValidationRule>