force-app/main/default/objects/Bank_Account__c/validationRules/Validation_on_demat_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_demat_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Account_type__c , &quot;Demat account&quot;),(Balance__c &lt;15000))</errorConditionFormula>
    <errorDisplayField>Balance__c</errorDisplayField>
    <errorMessage>Minimum balance should be 2500 for Minor account</errorMessage>
</ValidationRule>