force-app/main/default/objects/Bank_Account__c/validationRules/Validation_on_Saving_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Saving_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Account_type__c , &quot;Saving account&quot;),(Balance__c &lt;5000))</errorConditionFormula>
    <errorDisplayField>Balance__c</errorDisplayField>
    <errorMessage>Minimum balance should be 5000 for saving account.</errorMessage>
</ValidationRule>